--- a/p2/P2_1_Model_training_and_evaluation.ipynb
+++ b/p2/P2_1_Model_training_and_evaluation.ipynb
@@ -705,7 +705,7 @@
     "\n",
     "# NOTES:\n",
     "#   - binary classification problem\n",
-    "#   - balanced ???\n",
+    "#   - unbalanced (more classes of B that of M)\n",
     "#   - symmetric ??? "
    ]
   },
